Add validators and tests for them

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,10 @@ plugins {
 
 group = 'com.oshkanov'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+tasks.withType(JavaCompile) {
+	options.release = 17
+}
 
 repositories {
 	mavenCentral()
